package common;

/**
 *
 * @author gpoeta
 */
public interface Controller {
    void main();
    void create();
    void update();
    void view();
    void delete();
}
