@startuml AcademicManager


package academicmanager {
    note "The builders, setters, and getters \n are not included in the diagram." as N1

    class AcademicManager {
        # loadData(): void
        {static} + main(args: String[]): void
    }

    ' ==========================================================================

    package common {

        interface Model {
            save(): void
            load(): void
            validate(): boolean
        }

        interface Controller {
            main(): void
            create(): void
            update(): void
            view(): void
            delete(): void
        }

    }

    ' ==========================================================================

    package student {
        
        class Student {
            {static} - TRANSLATE_NAME: String
            - id: int
            - dossierNumber: String
            - firstName: String
            - lastName: String
            - birthDate: LocalDate
            {static} # serial: int
            {static} # all: Map<Integer, Student>

            {static} # addSerial(): void
            {static} + getById(int id): Student
            {abstract} + save(): void
            {abstract} + validate(): boolean
            {abstract} + toString(): String
        }

        class StudentController {
            {abstract} + main(): void
            {abstract} + create(): void
            {abstract} + update(): void
            {abstract} + view(): void
            {abstract} + delete(): void
        }

    }
}

' ==============================================================================
' estudiantes 

Student --|> Model

StudentController --|> Controller
StudentController <-- Student

' ==============================================================================

@enduml